images lazy loading / small fix search input display on ios

--- a/src/components/character-grid-item/CharacterGridItem.css
+++ b/src/components/character-grid-item/CharacterGridItem.css
@@ -16,7 +16,7 @@
   position: absolute;
   transform: translate(33%) rotate(45deg);
   z-index: 1;
-  transition: transform .3s linear;
+  transition: transform 0.3s linear;
 }
 .character-grid-item:hover .character-grid-item__corner {
   transform: translateX(100px) rotate(45deg);
@@ -27,7 +27,6 @@
 }
 .character-grid-item__image {
   transition: all 0.3s linear;
-  max-width: 100%;
   object-fit: contain;
 }
 .character-grid-item:hover .character-grid-item__image {
